# matchbox

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
matchbox/: Cargo.toml  README.md
matchbox/src/: lib.rs  test.rs
matchbox/src/snapshots/: matchbox__test__basic-2.snap  matchbox__test__basic-3.snap  matchbox__test__basic_owned-3.snap  matchbox__test__basic_owned.snap  matchbox__test__bindings.snap  matchbox__test__guards-2.snap  matchbox__test__guards.snap  matchbox__test__other-3.snap  matchbox__test__other-4.snap  matchbox__test__spelling.snap
matchbox/tests/: test.rs
src/: lib.rs  test.rs
src/snapshots/: matchbox__test__basic-2.snap  matchbox__test__basic-3.snap  matchbox__test__basic_owned-2.snap  matchbox__test__basic_owned-3.snap  matchbox__test__bindings.snap  matchbox__test__guards.snap  matchbox__test__other-2.snap  matchbox__test__other-3.snap  matchbox__test__other-4.snap  matchbox__test__other.snap  matchbox__test__spelling-2.snap
tests/: test.rs  test_one.rs
tests/compile-fail/: missing_amp.rs  missing_amp.stderr  missing_deref.rs  missing_deref.stderr  wrong_macro.rs  wrong_macro.stderr
