[package]
name = "match_deref"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Deref patterns in \"match\" for stable Rust. Now you can match through Rc, String, etc"
homepage = "https://sr.ht/~safinaskar/match_deref-rs"
repository = "https://git.sr.ht/~safinaskar/match_deref-rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.80"
quote = "1.0.37"
syn = { version = "2.0.0", features = ["fold", "full", "extra-traits"] }

[dev-dependencies]
insta = "1.40.0"
prettyplease = { version = "0.2.22", features = ["verbatim"] }
syn = { version = "2.0.77", features = ["parsing"] }
