[package]
name = "matchbox"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "`box` and deref patterns in \"match\" for stable Rust. Now you can match through `Box`, `Rc`, etc."
repository = "https://github.com/hydro-project/matchbox"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.80"
quote = "1.0.37"
syn = { version = "2.0.7", features = ["fold", "full", "extra-traits", "parsing"] }

[dev-dependencies]
insta = "1.40.0"
prettyplease = { version = "0.2.22", features = ["verbatim"] }
trybuild = "1.0.99"
